crates/app/tests/snapshots/subagent_prompt_golden__subagent_full_codex_false_parallel_false_yield_true_plan_false_eager_always.snap
---
source: crates/app/tests/subagent_prompt_golden.rs
expression: prompt
---
Golden specialist

# Specialist

Complete only the delegated target.

# Shared Context
Shared batch contract.

Preserve ownership.

# Runtime
Workspace root: `/workspace/.worktrees/golden`
Active plan: `/workspace/CPLAN.md`

## Active Plan
# Plan

1. Inspect.
2. Implement.
On the first turn, delegate at least one meaningful independent slice when spawn policy permits it.

Return the terminal result through `yield` with complete data matching this effective JSON Schema:
{"properties":{"answer":{"type":"string"},"count":{"type":"integer"}},"required":["answer"],"type":"object"}

# IRC
You are Golden (task) on roster generation 42.
Ordinary sends are fire-and-forget. Await a reply only when blocked; reply with the received message id. Delivery receipts describe routing, not task completion.
- Golden (task, running, self): editing
- Scout (scout, idle): idle
- Reviewer (reviewer, parked): reviewing

Incremental yield paths accumulate until a terminal yield; never repeat assembled sections in the terminal payload.
